@@ -1336,7 +1336,9 @@ oracleBeginForeignScan(ForeignScanState *node, int eflags)
 	/* connect to Oracle database */
 	fdw_state->session = oracleGetSession(
 			fdw_state->dbserver,
-			(XactReadOnly ? ORA_TRANS_READ_ONLY : fdw_state->isolation_level),
+			((strcmp(GetConfigOptionByName("transaction_read_only", NULL), "on") == 0)
+				? ORA_TRANS_READ_ONLY
+				: fdw_state->isolation_level),
 			fdw_state->user,
 			fdw_state->password,
 			fdw_state->nls_lang,
@@ -2807,7 +2809,9 @@ struct OracleFdwState
 	/* connect to Oracle database */
 	fdwState->session = oracleGetSession(
 		fdwState->dbserver,
-		(XactReadOnly ? ORA_TRANS_READ_ONLY : fdwState->isolation_level),
+		((strcmp(GetConfigOptionByName("transaction_read_only", NULL), "on") == 0)
+			? ORA_TRANS_READ_ONLY
+			: fdwState->isolation_level),
 		fdwState->user,
 		fdwState->password,
 		fdwState->nls_lang,
